<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bytedesk_chat_input_background"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <Button
        android:id="@+id/bytedesk_chat_input_voice_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bytedesk_input_voice_button"
        />

    <Button
        android:id="@+id/bytedesk_chat_input_record_voice_button"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="0dp"
        android:layout_toLeftOf="@+id/bytedesk_chat_input_send_button"
        android:layout_toRightOf="@+id/bytedesk_chat_input_voice_button"
        android:background="@drawable/bytedesk_input_record_voice_button"
        android:text="@string/kfds_press_to_speak"
        android:visibility="gone" />

    <EditText
        android:id="@+id/bytedesk_chat_fragment_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/prompt_message"
        android:imeActionLabel="@string/action_send"
        android:imeOptions="actionSend|flagNoEnterAction"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textShortMessage"
        android:maxLines="4"
        />

    <Button
        android:id="@+id/bytedesk_chat_input_emotion_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/bytedesk_chat_input_plus_button"
        android:background="@drawable/bytedesk_input_emotion_button" />

    <Button
        android:id="@+id/bytedesk_chat_input_send_button"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bytedesk_input_send_button"
        android:text="发送"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/bytedesk_chat_input_plus_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bytedesk_input_plus_button"
        />

</LinearLayout>

