<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/appkefu_voice_rcd_hint_bg"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/appkefu_voice_record_hint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/appkefu_voice_record_hint_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/kfds_imageview_content_description"
            android:src="@drawable/appkefu_voice_rcd_hint" />

        <ImageView
            android:id="@+id/appkefu_voice_record_hint_amp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/kfds_imageview_content_description"
            android:src="@drawable/appkefu_voice_rcd_hint_amp1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/appkefu_voice_record_hint_text_record_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appkefu_voice_record_hint_layout"
        android:layout_margin="18dp">

        <TextView
            android:id="@+id/appkefu_voice_record_hint_record_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kfds_record_voice_hint_record" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/appkefu_voice_record_hint_cancel_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/appkefu_voice_record_hint_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/kfds_imageview_content_description"
            android:src="@drawable/appkefu_rcd_cancel_icon"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/appkefu_voice_record_hint_text_cancel_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appkefu_voice_record_hint_cancel_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/appkefu_rcd_cancel_bg"
        android:visibility="gone">

        <TextView
            android:id="@+id/appkefu_voice_record_hint_cancel_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kfds_record_voice_hint_cancel" />

    </LinearLayout>

</RelativeLayout>