<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bytedesk_chat_extension"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--TODO: 扩展-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/appkefu_plus_pick_picture_btn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_pic_icon" />

            <TextView
                android:id="@+id/appkefu_plus_pick_picture_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/kfds_pick_picture_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/appkefu_plus_take_picture_btn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_voice_icon" />

            <TextView
                android:id="@+id/appkefu_plus_take_picture_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/kfds_take_picture_label" />
        </LinearLayout>

        <!--发送文件-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/appkefu_plus_file_btn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_friendcard_icon" />

            <TextView
                android:id="@+id/appkefu_plus_file_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/kfds_file_label" />
        </LinearLayout>

        <!--商品-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/appkefu_plus_shop_btn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_friendcard_icon" />

            <TextView
                android:id="@+id/appkefu_plus_shop_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/bytedesk_shop_label" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left">

        <!--红包-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/appkefu_plus_show_red_packet_btn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_wxtalk_icon" />

            <TextView
                android:id="@+id/appkefu_plus_show_red_packet_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/kfds_show_red_packet_label" />
        </LinearLayout>

        <!--阅后即焚-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/appkefu_read_destroy_btn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_friendcard_icon" />

            <TextView
                android:id="@+id/appkefu_plus_read_destroy_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/bytedesk_read_destroy_label" />
        </LinearLayout>

        <!--占位符，便于以后扩展-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/appkefu_plus_take_picture_btn1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_voice_icon" />

            <TextView
                android:id="@+id/appkefu_plus_take_picture_textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/kfds_take_picture_label" />
        </LinearLayout>

        <!--占位符，便于以后扩展-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/appkefu_plus_take_picture_btn2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/appkefu_pluspanel_btn"
                android:contentDescription="@string/kfds_imageview_content_description"
                android:src="@drawable/appkefu_panel_voice_icon" />

            <TextView
                android:id="@+id/appkefu_plus_take_picture_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/kfds_take_picture_label" />
        </LinearLayout>


    </LinearLayout>





</LinearLayout>
